# FastAPI_Study

./: .env.dev  .gitignore  environment.yaml
backend/: README.md  config.yaml  database.py  environment.yaml  main.py  pyproject.toml
backend/migrations/models/: 0_20230329210752_init.py
backend/models/: __init__.py  auth_models.py  logs.py  models.py
backend/routes/: auth.py  example.py  login.py  user.py
docs/: 1_setup.md  2_crud.md
vue_fastapi/: .gitignore  README.md  env.prod  package-lock.json  package.json  vue.config.js
vue_fastapi/src/: App.vue  main.js
vue_fastapi/src/components/: AuthComponent.vue  LoginLogComponent.vue  RegisterComponent.vue
vue_fastapi/src/router/: index.js
vue_fastapi/src/store/: index.js
vue_fastapi/src/store/modules/: auth.js  example1.js  example2.js  login.js
vue_fastapi/src/views/: AuthView.vue  LoginExampleView.vue  StoreExampleView.vue  UserExampleView.vue
